--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,14 @@
-.floating-notice{
-	position:absolute;
-	display: none;
+.small-blur{
+	color: #9197a3;
 }
 
+/*.floating-notice{
+	position:absolute;
+	width: 500px;
+	height: 500px;
+	background: #535344;
+	z-index: 23423;
+	top: 10%;
+	left: 30%;
+}*/
 
