--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -8,7 +8,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-	       	<a class="navbar-brand" href="{% url 'index' %}">Social website</a>
+	       	<a class="navbar-brand" href="{% url 'index' %}">Find All Together</a>
 	    </div>
 	    <div id="navbar" class="navbar-collapse collapse">
 	    	<ul class="nav navbar-nav">
@@ -23,22 +23,22 @@
 	        {% endif %}
 	      	{% if user.is_authenticated %}
             <ul class="nav navbar-nav navbar-right">
-            	<li><a href="#"><i class="fa fa-envelope"></i></i>Messages</a></li>
-            	<li><a href="#"><i class="fa fa-bell"></i>Notifications</a></li>
+            	<li><a href="#"><i class="fa fa-envelope"></i> Messages</a></li>
+            	<li><a href="#"><i class="fa fa-bell"></i> Notifications</a></li>
                 <li>
                 	<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                		{{ user.username }}
+                		{{ user.name }}
                 		<span class="caret"></span>
                 	</a>
                 	<ul class="dropdown-menu">
-                		<li><a href="#">My Timeline</a></li>
-				    	<li><a href="#"><i class="fa fa-fw fa-user"></i>Profile</a></li>
+                		<li><a href="#"><i class="fa fa-fw fa-tachometer"></i> {% trans "Timeline" %}</a></li>
+				    	<li><a href="#"><i class="fa fa-fw fa-user"></i> {% trans "Profile" %}</a></li>
 				    	<li role="separator" class="divider"></li>
-				    	<li><a href="http://www.findalltogether.com/wp/about/">{% trans "About" %}</a></li>
-	            		<li><a href="http://www.findalltogether.com/wp/contact-us/">{% trans "Contact" %}</a></li>
+				    	<li><a href="http://www.findalltogether.com/wp/about/"><i class="fa fa-fw fa-info-circle"></i> {% trans "About" %}</a></li>
+	            		<li><a href="http://www.findalltogether.com/wp/contact-us/"><i class="fa fa-envelope-o"></i> {% trans "Contact" %}</a></li>
 	            		<li role="separator" class="divider"></li>
-						<li><a href="{% url 'password_change' %}"><i class="fa fa-fw fa-gear"></i>{% trans "Change password" %}</a></li>
-						<li><a href="{% url 'logout' %}"><i class="fa fa-fw fa-power-off"></i>{% trans 'Log out' %}</a></li>
+						<li><a href="{% url 'password_change' %}"><i class="fa fa-fw fa-gear"></i> {% trans "Change password" %}</a></li>
+						<li><a href="{% url 'logout' %}"><i class="fa fa-fw fa-power-off"></i> {% trans 'Log out' %}</a></li>
 					</ul>
                 </li>		            
             </ul>
