--- a/templates/parts/left-sidebar.html
+++ b/templates/parts/left-sidebar.html
@@ -1,7 +1,19 @@
-<div class="col-lg-2 col-md-2 sidebar">
+{% load i18n %}
+<div class="col-lg-2 col-md-2 sidebar left-sidebar">
 	{% block left-sidebar-content%}
 	{% block mini-profile %}
-	
+	<div class="mini-profile">
+		<img src="" class="thumbnail" height="200" width="100%"/>
+		<h3><a href="#">{{ request.user.name }}</a></h3>
+		<nav class="nav">
+			<ul>
+				<li><a href="#">{% trans 'Edit Profile' %}</a></li>
+				<li><a href="#">{% trans 'Followers' %}</a></li>
+				<li><a href="#">{% trans 'Following' %}</a></li>
+				<li><a href="#">{% trans 'Settings' %}</a></li>
+			</ul>
+		</nav>
+	</div>
 	{% endblock %}
 	{% endblock %}
 </div>
