--- a/templates/parts/status-form.html
+++ b/templates/parts/status-form.html
@@ -8,10 +8,10 @@
 	            <textarea name="status" class="form-control" placeholder="{% trans 'sharing is carring' %}" rows="5"></textarea>
 	        </div>
 	        <div class="navbar-nav">
-				<a href="#"><i class="fa fa-paperclip"></i> {% trans 'Attach' %}</a>&nbsp;
-				<a href="#"><i class="fa fa-picture-o"></i> {% trans 'Photo' %}</a>&nbsp;
-				<a href="#"><i class="fa fa-music"></i> {% trans 'Music' %}</a>&nbsp;
-				<a href="#"><i class="fa fa-video-camera"></i> {% trans 'Video' %}</a>&nbsp;
+				<a href="#"><i class="fa fa-paperclip"></i> {% trans 'Attach' %}</a>&nbsp;&nbsp;
+				<a href="#"><i class="fa fa-picture-o"></i> {% trans 'Photo' %}</a>&nbsp;&nbsp;
+				<a href="#"><i class="fa fa-music"></i> {% trans 'Music' %}</a>&nbsp;&nbsp;
+				<a href="#"><i class="fa fa-video-camera"></i> {% trans 'Video' %}</a>
 			</div>
 	        <button type="submit" id="submit-status" class="btn btn-primary pull-right">{% trans 'Share' %}</button>
 	    </form>
