--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	    <meta name="description" content="{% block description %}This is demo of social website{% endblock %}">
 	    <meta name="author" content="Harish Kumar">
 	
-	    <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.ico">
+	    <link rel="shortcut icon" href="http://www.findalltogether.com/wp/wp-content/uploads/2015/05/logo1.png">
 	    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -54,6 +54,7 @@
 		</div>
 	    <script src="{{ STATIC_URL }}js/jquery-2.0.3.min.js"></script>
 	    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
+	    <script src="{{ STATIC_URL }}js/base.js"></script>
 		{% block bottom-group-static %}{% endblock %}
 		{% block bottom-page-static %}{% endblock %}
   	</body>
