--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	    <link rel="shortcut icon" href="http://www.findalltogether.com/wp/wp-content/uploads/2015/05/logo1.png">
 	    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	    <link href="{{ STATIC_URL }}font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
 	    <link href="{{ STATIC_URL }}css/base.css" rel="stylesheet">
 	    {% block group-static %}{% endblock %}
 	    {% block page-static %}{% endblock %}
@@ -28,10 +28,9 @@
 		{% endblock %}
 	    <div class="container">
 	        {% block container %}
+	        {% block page-header %}{% endblock %}
 	    	<div class="row">
-		    	{% block left-sidebar %}
-		    	{% include 'parts/left-sidebar.html' %}
-		    	{% endblock %}
+		    	{% block left-sidebar %}{% endblock %}
 		        <div class="content col-md-8 col-lg-8">
 		            {% block content %}{% endblock %}
 		        </div>
