--- a/templates/parts/comment_form.html
+++ b/templates/parts/comment_form.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 <div class="add-comment">
-	<form id="comment-form" method="post" action="{% url 'add-comment' %}" onsubmit="return false">
+	<form id="comment-form-{{ post.id }}" method="post" action="{% url 'add-comment' %}" onsubmit="return false">
 		{% csrf_token %}
 		<input name="post" value="{{ post.id }}" type="hidden"/>
 		<input name="user" value="{{ request.user.id }}" type="hidden"/>
-		<input name="comment" type="text" class="form-control" placeholder="{% trans 'Write a comment ...' %}" id="comment-input" />
+		<input name="comment" data-post_id="{{ post.id }}" type="text" class="form-control comment-input" placeholder="{% trans 'Write a comment ...' %}" id="comment-input-{{ post.id }}" />
 	</form>
 </div>
