--- a/templates/user/timeline-base.html
+++ b/templates/user/timeline-base.html
@@ -7,7 +7,7 @@
 
 {% block page-header %}
 <div class="col-sm-12 cover-section">
-	<div class="cover-image-wrapper row">
+	<div class="cover-image-wrapper">
 		<img src="{{ user.cover_image.url }}" width="100%" height="300px" />
 	</div>
 	<div class="profile-photo-wrapper">
