--- a/static/css/base.css
+++ b/static/css/base.css
@@ -161,6 +161,10 @@
 	float:right;
 }
 
+#dummy-comment-form-wrapper{
+	display: none;
+}
+
 @media screen and (max-width: 768px){
 	.comment-main{
 		width:80%;
