--- a/templates/ajax_responses/comment_list.html
+++ b/templates/ajax_responses/comment_list.html
@@ -8,12 +8,12 @@
 		<div class="comment-settings pull-right">
 			<i class="fa fa-chevron-circle-down fa-1"></i>
 			<ul class="nav nav-pills nav-stacked comment-settings-list">
-				<li><a href="#" id='edit-comment-{{ comment.id }}' class="edit-comment-link">Edit</a></li>
+				<li><a href="{% url 'update-comment' comment.id %}" id='edit-comment-{{ comment.id }}' class="edit-comment-link" data-comment_id="{{ comment.id }}" onclick="edit_comment(this); return false;">Edit</a></li>
 				<li><a href="{% url 'delete-comment' comment.id %}" class="delete-comment-link" data-comment_id="{{ comment.id }}" data-c="{{ csrf_token }}" onclick="delete_comment(this); return false;">Delete</a></li>
 				<li><a href="#">Report</a></li>
 			</ul>
 		</div>
-		<p>{{ comment.comment }}</p>
+		<p id="comment-content-{{ comment.id }}">{{ comment.comment }}</p>
 	</div>
 	<div class="comment-meta">
 		<small class="small-blur">{{ comment.created_on }}</small>
