--- a/templates/parts/post.html
+++ b/templates/parts/post.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load thumbnail %}
-<div class="row post">
+<div class="row post" id="post-{{ post.id }}">
 	<div class="">
 		<div class="post-meta">
 			<div class="profile-pic">
@@ -14,6 +14,26 @@
 		</div>
 		<div class="post-status">
 			<p>{{ post.status }}</p>
+			{% if post.root_post %}
+			<div class="post">
+				<div class="">
+					<div class="post-meta">
+						<div class="profile-pic">
+							{% thumbnail post.root_post.user.profile_photo.url "40x40" crop="center" as im %}
+							    <img src="{{ im.url }}" width="50" height="50" class="thumbnail">
+							{% endthumbnail %}
+							<img src="{{ post.root_post.user.profile_photo.url }}" width="50" height="50" class="thumbnail">
+						</div>
+						<h5><a href="#">{{ post.root_post.user.name }}</a></h5>
+						<small class="small-blur">{{ post.root_post.created_on }}</small>
+					</div>
+					<div class="post-status">
+						<p>{{ post.root_post.status }}</p>
+					</div>
+				</div>
+			</div>
+
+			{% endif %}
 			<div class="navbar-nav">
 				<a href="#" title="{% trans 'Like' %}">
 					<i class="fa fa-thumbs-o-up fa-1"></i>
@@ -24,7 +44,7 @@
 				<a href="#" title="{% trans 'Comment' %}"  data-id="{{ post.id }}" class="show-comment">
 					<i class="fa fa-comment fa-1"></i>&nbsp;{% if post.comment_set.all.count %}{{ post.comment_set.all.count }}{% endif %}
 				</a>&nbsp;&nbsp;<i class="fa fa-circle fa-1 dot"></i>&nbsp;&nbsp;
-				<a href="#" title="{% trans 'Share' %}">
+				<a href="{% if post.root_post %}{% url 'share-post' post.root_post.id %}{% else %}{% url 'share-post' post.id %}{% endif %}" title="{% trans 'Share' %}" class="share-post">
 					<i class="fa fa-share-alt fa-1"></i>
 				</a>&nbsp;&nbsp;<i class="fa fa-circle fa-1 dot"></i>&nbsp;&nbsp;
 				<a href="#"title="{% trans 'Report' %}">
