--- a/templates/ajax_responses/post-failed.html
+++ b/templates/ajax_responses/post-failed.html
@@ -1,7 +1,3 @@
 your post fails
 
-<ul>
-{% for field in form.fields %}
-    <li>{{ field.errors|join:'<br />' }}</li>
-{% endfor %}
-</ul>
+{{ form.as_table }}
