--- a/templates/parts/post-form.html
+++ b/templates/parts/post-form.html
@@ -1,19 +1,21 @@
 {% load i18n %}
 <div class="row">
 	<div class="panel-body post-form-container">
-    	<form method="post" onsubmit="return false" action="{% url 'add-post' %}" class="post-form" id="post-form">
+    	<form method="post" onsubmit="return false" action="{% url 'add-post' %}" class="post-form" id="post-form" enctype="multipart/form-data">
     		{% csrf_token %}
     		<input type="hidden" name="user" value="{{ request.user.id }}" />
 	        <div class="form-group">
 	            <textarea name="status" class="form-control" placeholder="{% trans 'sharing is carring' %}" rows="5"></textarea>
 	        </div>
-	        <input type="hidden" name="attachment" />
-	        <input type="hidden" name="attachment_type" />
+	        <input type="file" name="attachment" id="attachment-file" class="attachment-file"/>
+	        <input type="hidden" name="attachment_type" id="attachment_type" />
 	        <div class="navbar-nav">
-				<a href="#"><i class="fa fa-paperclip"></i> {% trans 'Attach' %}</a>&nbsp;&nbsp;
-				<a href="#"><i class="fa fa-picture-o"></i> {% trans 'Photo' %}</a>&nbsp;&nbsp;
-				<a href="#"><i class="fa fa-music"></i> {% trans 'Music' %}</a>&nbsp;&nbsp;
-				<a href="#"><i class="fa fa-video-camera"></i> {% trans 'Video' %}</a>
+				<a href="#" title="{% trans 'Attach' %}" id="general-attachment"><i class="fa fa-paperclip"></i></a>&nbsp;&nbsp;
+				<a href="#" title="{% trans 'Photo' %}" id="image-attachment"><i class="fa fa-picture-o"></i></a>&nbsp;&nbsp;
+				<a href="#" title="{% trans 'Music' %}" id="audio-attachment"><i class="fa fa-music"></i></a>&nbsp;&nbsp;
+				<a href="#" title="{% trans 'Video' %}" id="video-attachment"><i class="fa fa-video-camera"></i></a>
+				<progress id="post-upload-status"></progress>
+				<p id="attachment-name"></p>
 			</div>
 	        <button type="submit" id="submit-post" class="btn btn-primary pull-right">{% trans 'Share' %}</button>
 	    </form>
