--- a/templates/parts/left-sidebar.html
+++ b/templates/parts/left-sidebar.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class="col-lg-2 col-md-2 sidebar left-sidebar">
+<div class="col-lg-offset-1 col-lg-2 col-md-3 sidebar left-sidebar">
 	{% block left-sidebar-content%}
 	{% block mini-profile %}
 	<div class="mini-profile">
